--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "systemVersion": "1.0",
   "system": {
     "version": "1.0.0",
-    "name": "King Ticket",
+    "name": "Velox Telecom",
     "url": "#"
   },
   "private": true,
